# Tidekeeper

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.jsx  Tidekeeper Nexus Description.txt  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.jsx  TitleBar.jsx
src/styles/: globals.css
src/utils/: theme.js
src/views/: DiscoverView.jsx  LibraryView.jsx  SettingsView.jsx  SetupView.jsx  UpdatesView.jsx
~/.tauri/: tidekeeper.key  tidekeeper.key.pub
