[package]
name = "tidekeeper"
version = "0.5.13"
description = "UE4SS Mod Manager for Subnautica 2"
authors = ["ToobsTube"]
edition = "2021"

[lib]
name = "tidekeeper_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
sevenz-rust = "0.6"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
